--- a/Infrastructure/GestorFacturas.Infrastructure.csproj
+++ b/Infrastructure/GestorFacturas.Infrastructure.csproj
@@ -7,8 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
-    <Folder Include="Repositories\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
   <ItemGroup>
