Corrige ruta para obtener db_exam_json

--- a/Infrastructure/GestorFacturas.Infrastructure.csproj
+++ b/Infrastructure/GestorFacturas.Infrastructure.csproj
@@ -23,4 +23,11 @@
     <ProjectReference Include="..\Domain\GestorFacturas.Domain.csproj" />
   </ItemGroup>
 
+	<ItemGroup>
+		<None Update="Data\bd_exam.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</None>
+	</ItemGroup>
+
+
 </Project>
